@@ -1,14 +1,0 @@
-<?xml version="1.0" standalone="no"?>
-<omf>
-  <resource>
-    <title>
-      The Logview Manual
-    </title>
-    <subject>
-      <category>GNOME|Utilities</category>
-    </subject>
-    <format mime="text/xml"/>
-    <identifier url="logview.xml"/>
-    <language code="C"/>
-  </resource>
-</omf>
