@@ -1,3 +1,8 @@
+2002-12-21 John Fleck <jfleck@inkstain.net>
+
+	* remove help/C/logview.xml logview-C.omf
+	no longer used
+
 2002-12-02  Glynn Foster  <glynn.foster@sun.com>
 
 	* gnome-system-log.desktop.in: Update for StartupNotify
